test/files/neg/bug1333.scala
case class A(a: Int)(b: Int)(c: Int)
