test/files/neg/bug1333.check
bug1333.scala:1: error: case classes limited by implementation: maximum of 2 constructor parameter lists.
case class A(a: Int)(b: Int)(c: Int)
           ^
one error found
